--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
+body{
+	background-color: #000000;
+	color: #FFF;
+	margin:0;
+}
 p {
 	font-family: 'Roboto Slab', serif;
+	background: #B82601;
+	display:block;
+	padding: 30px;
 }
 h1 { 
 	font-family: 'Merriweather', serif;
+	background-color: #006622;
+	display: block;
+
 }
+.even-paragraph{
+	background: #062F4F
+}
+div {}
