--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
 p {
 	font-family: 'Roboto Slab', serif;
 	background: #B82601;
+	border-bottom: 5px solid #062F4F;
 	display:block;
 	padding: 30px;
 }
@@ -16,6 +17,7 @@ h1 {
 
 }
 .even-paragraph{
-	background: #062F4F
+	background: #062F4F;
+	border-bottom: 5px solid #B82601;
 }
 div {}
